--- a/setup.yml
+++ b/setup.yml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: GitRepository
 metadata:
-  name: helloworld-tf
+  name: hello-terraform
 spec:
   interval: 1m
   url: https://github.com/tgolden-es/thrv-demo
@@ -12,11 +12,11 @@ spec:
 apiVersion: infra.contrib.fluxcd.io/v1alpha2
 kind: Terraform
 metadata:
-  name: helloworld-tf
+  name: hello-terraform
 spec:
   path: ./
   approvePlan: ""
   interval: 1m
   sourceRef:
     kind: GitRepository
-    name: helloworld-tf
+    name: hello-terraform
